Fixed random story so that it works, set pagination to 2 stories so paginator is visible, will fix this in future after paginator is correctly styled

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -102,6 +102,7 @@ input[type="text"],input[type="password"]{
     width:190px;
 }
 
+/* Home page */
 .home_column {
 	padding: 0px;
 	width: 379px;
@@ -110,6 +111,10 @@ input[type="text"],input[type="password"]{
 	margin-bottom: 2px;
 	margin-left: 0px;
 	float:left;
+}
+
+#refresh_random {
+    cursor:pointer;
 }
 
 /* Section Headers */
@@ -141,12 +146,13 @@ input[type="text"],input[type="password"]{
 .section .name a {
 	border: none;
 	color: #3BA20E;
+
 }
 
 
 /* Story List */
 
-.story , .content_frame ,.sidebar_frame{
+.story , .content_frame ,.sidebar_frame, .paginator{
 	background-color: #F6E3CE;
 	padding: 4px;
 	-moz-border-radius:8px;
@@ -161,6 +167,7 @@ input[type="text"],input[type="password"]{
 	box-shadow:0px 0px 4px #B45F04;
 	-webkit-box-shadow:0px 0px 4px #B45F04;
 	-moz-box-shadow: 0px 0px 4px #B45F04;
+
 }
 
 .story>.title, .content_frame h1.title,.sidebar_frame>h1{
